# Backend_login

./: .gitignore  README.md  app.py  init_db.py  main.py  pyproject.toml
Templates/: admin.html  login.html  register.html  tabla.html
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: auth.py  waste.py
app/utils/: jwt_handler.py
static/: styles.css
